--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <!-- 包含子模块 -->
     <modules>
+        <module>common</module>
         <module>server</module>
         <module>serverss</module>
         <module>client</module>
