--- a/dbcenters/src/main/resources/application.yml
+++ b/dbcenters/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: service-dbcenters
   profiles:
-    include: mybatis
+    include: mybatis,redis
 
 eureka:
   client:
