--- a/common/pom.xml
+++ b/common/pom.xml
@@ -54,6 +54,13 @@
             <version>2.2</version>
         </dependency>
 
+        <!--AES解密-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
