--- a/common/pom.xml
+++ b/common/pom.xml
@@ -61,6 +61,12 @@
             <version>1.46</version>
         </dependency>
 
+        <!-- google 图片压缩 -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
