--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <!-- 包含子模块 -->
     <modules>
         <module>eureka-server</module>
+        <module>eureka-provider</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
