--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>eureka-server</module>
         <module>eureka-provider</module>
+        <module>eureka-provider2</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
