eureka-feign initial

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>eureka-provider</module>
         <module>eureka-provider2</module>
         <module>eureka-ribbon</module>
+        <module>eureka-feign</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
