--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>eureka-provider2</module>
         <module>eureka-ribbon</module>
         <module>eureka-feign</module>
+        <module>eureka-hystrix</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
