--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>eureka-hystrix</module>
         <module>eureka-zuul</module>
         <module>config-server</module>
+        <module>config-client</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
