--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -8,3 +8,11 @@ spring:
       label: master
       profile: dev
       uri: http://localhost:8888/
+      discovery:
+        enabled: true
+        service-id: config-server
+eureka:
+  client:
+    service-url:
+      defaultZone:  http://localhost:8761/eureka/
+
