--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -12,4 +12,7 @@ spring:
           username:
           password:
       label: master
-
+eureka:
+  client:
+    service-url:
+      defaultZone:  http://localhost:8761/eureka/
