--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>eureka-zuul</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>hystrix-dashboard</module>
         <module>common</module>
         <module>server</module>
         <module>serverss</module>
