修改项目名称

--- a/eureka-provider/pom.xml
+++ b/eureka-provider/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.cn</groupId>
-		<artifactId>cloudmanage</artifactId>
+		<artifactId>spring-cloud-Finchley</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
