--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <groupId>com.cn</groupId>
-        <artifactId>cloudmanage</artifactId>
+        <artifactId>spring-cloud-Finchley</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
