--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -33,6 +33,7 @@
         <module>eureka-zuul</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>config-bus</module>
         <module>hystrix-dashboard</module>
         <module>hystrix-turbine</module>
         <module>common</module>
