--- a/sleuth-zipkin/src/main/resources/application.properties
+++ b/sleuth-zipkin/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8988
 spring.application.name=sleuth-zipkin
+#zipkin服务地址
 spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+#配置采样百分比，开发环境全部，生产环境默认
+spring.sleuth.sampler.probability=1
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
