--- a/common/pom.xml
+++ b/common/pom.xml
@@ -110,6 +110,21 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.8.sec06</version>
         </dependency>
+
+        <!-- ffmpeg -->
+        <!-- https://mvnrepository.com/artifact/org.bytedeco/javacv -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.bytedeco.javacpp-presets/ffmpeg-platform -->
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>ffmpeg-platform</artifactId>
+            <version>4.1-1.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
